--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -14,6 +14,9 @@
 % Generate the table of contents (automatically includes chapters and sections)
 % Note: To include the bibliography and all references, ensure to compile with Biber or BibTeX after running LaTeX.
 \tableofcontents
+\listoffigures
+\listoftables
+\listofalgorithms
 
 \input{frontmatter/list_of_symbols}
 
@@ -24,9 +27,9 @@
 \input{chapters/04_test_data}
 \input{chapters/05_algorithmic_methods}
 \input{chapters/06_experiments}
-% \input{chapters/07_dynamic_analysis}
-% \input{chapters/08_model_extensions}
-% \input{chapters/09_conclusion}
+\input{chapters/07_dynamic_analysis}
+\input{chapters/08_model_extensions}
+\input{chapters/09_conclusion}
 
 \printbibliography
 
