--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -1,20 +1,6 @@
-@book{garey1979computers,
-  author    = {Garey, Michael R. and Johnson, David S.},
-  title     = {Computers and Intractability: A Guide to the Theory of NP-Completeness},
-  publisher = {WH Freeman \& Co.},
-  year      = {1979},
-  address   = {New York}
-}
+% (usunięto duplikat Garey&Johnson — pozostawiono wpis 'garey1979')
 
-@article{cockayne2004roman,
-  author    = {Cockayne, E. J. and Dreyer Jr., P. A. and Hedetniemi, S. M. and Hedetniemi, S. T.},
-  title     = {Roman domination in graphs},
-  journal   = {Discrete Mathematics},
-  volume    = {278},
-  number    = {1–3},
-  pages     = {11--22},
-  year      = {2004}
-}
+% (usunięto duplikat Cockayne — pozostawiono wpis 'Cockayne2004')
 
 @book{henning2013roman,
   author    = {Henning, Michael A. and Hedetniemi, Stephen T.},
@@ -44,14 +30,7 @@
   year      = {1999}
 }
 
-@article{erdos1960evolution,
-  author    = {Erdős, Paul and Rényi, Alfréd},
-  title     = {On the evolution of random graphs},
-  journal   = {Publications of the Mathematical Institute of the Hungarian Academy of Sciences},
-  volume    = {5},
-  pages     = {17--61},
-  year      = {1960}
-}
+% (usunięto duplikat Erdos&Renyi — pozostawiono wpis 'ErdosRenyi1960')
 
 @misc{leskovec2014snap,
   author    = {Leskovec, Jure and Krevl, Andrej},
@@ -194,8 +173,8 @@
   url       = {https://docs.python.org/3/}
 }
 
-// ----------------------------------------------------------------------------------------
-// tutaj będę dawał na razie tak żeby było coś skąd info brałem potem się zmieni jak coś XD
+% ----------------------------------------------------------------------------------------
+% Notatka: pomocnicze pozycje online — zweryfikować przed publikacją.
 
 @misc{subscriptionEconomyIndex,
     title = {The Subscription Economy Index},
