--- a/docs/thesis/frontmatter/abstract_en.tex
+++ b/docs/thesis/frontmatter/abstract_en.tex
@@ -1,11 +1,9 @@
 \section*{Abstract}
 
-\textbf{PLACHOLDER:} The aim of this master's thesis was to develop a graph-based model for optimizing software license purchases (e.g., Duolingo Super, Spotify Premium) within social networks. The problem was formulated as an extension of classical Roman domination problems in graph theory, incorporating practical constraints such as group-size limitations and specific licensing costs.
+This thesis develops a graph-based model for optimizing software license purchases (e.g., Duolingo Super, Spotify Premium) in social networks. The problem is formulated as an extension of classical domination (including Roman domination) in graphs, incorporating realistic constraints on group sizes and pricing schemes for individual and group licenses.
 
-This thesis analyzes the computational complexity of the problem, demonstrating its NP-hard nature. Various algorithmic approaches were implemented and compared, including exact methods (Mixed Integer Programming - MIP), heuristics, and advanced metaheuristics (genetic algorithms, Tabu Search, simulated annealing, reinforcement learning). The algorithms were evaluated experimentally on both real-world datasets (from SNAP and NetworkRepository) and synthetic graph models (Barabási–Albert, Erdős–Rényi, Watts–Strogatz).
+We analyze the computational complexity and show NP-hardness. We implement and compare exact methods (integer linear programming) with heuristic and metaheuristic approaches (greedy, genetic algorithm, tabu search, simulated annealing, ant colony optimization). Experiments are conducted on real-world Facebook ego networks and on synthetic graphs (Barabási–Albert, Erdős–Rényi, Watts–Strogatz).
 
-Experimental results indicate that metaheuristic approaches, particularly genetic algorithms and reinforcement learning, effectively balance solution quality and computational efficiency. The thesis also explores dynamic scenarios in evolving social networks, demonstrating the effectiveness of adaptive algorithms in maintaining cost-efficiency.
+Results indicate that metaheuristics (notably genetic algorithm, tabu search and simulated annealing) achieve near-optimal solutions with significantly lower runtime than ILP for larger instances. We also study a dynamic variant in which the network evolves over time and evaluate the impact of pricing policies and additional subscription types on optimal purchasing decisions.
 
-Furthermore, the impact of varying pricing strategies and additional subscription types (e.g., Duo, Student plans) on consumer choices was investigated. The applicability of the proposed model in different industries was discussed, along with recommendations for future research directions.
-
-\textbf{Keywords:} graph theory, combinatorial optimization, Roman domination, social networks, metaheuristics, license purchase optimization, NP-hard problems.
+\textbf{Keywords:} graph theory, combinatorial optimization, Roman domination, social networks, heuristics, metaheuristics, integer programming.
