--- a/docs/thesis/frontmatter/abstract_pl.tex
+++ b/docs/thesis/frontmatter/abstract_pl.tex
@@ -1,11 +1,9 @@
 \section*{Streszczenie}
 
-\textbf{PLACHOLDER:} Celem niniejszej pracy magisterskiej było opracowanie grafowego modelu optymalizacji zakupu licencji oprogramowania (np. Duolingo Super, Spotify Premium) w sieciach społecznościowych. Problem ten rozpatrzono jako rozszerzenie problemu dominowania rzymskiego w grafach, uwzględniając dodatkowe ograniczenia dotyczące maksymalnego rozmiaru grup licencyjnych (od 2 do 6 osób) oraz różnic w kosztach licencji indywidualnych i grupowych.
+Celem niniejszej pracy magisterskiej było opracowanie grafowego modelu optymalizacji zakupu licencji oprogramowania (np. Duolingo Super, Spotify Premium) w sieciach społecznościowych. Problem ten sformułowano jako rozszerzenie klasycznego dominowania (w tym dominowania rzymskiego) w grafach, przy czym uwzględniono praktyczne ograniczenia dotyczące rozmiaru grup licencyjnych oraz struktury kosztów licencji indywidualnych i grupowych.
 
-W pracy przeprowadzono analizę złożoności obliczeniowej problemu, wykazując jego NP-trudność. Zastosowano różnorodne podejścia algorytmiczne, od metod dokładnych (programowanie matematyczne MIP) po heurystyki i metaheurystyki (algorytm zachłanny, algorytmy genetyczne, tabu search, symulowane wyżarzanie, reinforcement learning). Badania eksperymentalne przeprowadzono na rzeczywistych danych sieci społecznościowych (Ego-Facebook, Google+) oraz na danych syntetycznych (Barabási–Albert, Erdős–Rényi, Watts–Strogatz).
+W pracy przeprowadzono analizę złożoności obliczeniowej problemu, wykazując jego NP-trudność. Zaimplementowano i porównano podejścia algorytmiczne: metody dokładne (ILP/MIP) oraz kilka metod przybliżonych i metaheurystyk (algorytm zachłanny, algorytm genetyczny, tabu search, symulowane wyżarzanie, ant colony optimization). Badania eksperymentalne wykonano na rzeczywistych ego-sieciach Facebooka oraz na danych syntetycznych (Barabási–Albert, Erdős–Rényi, Watts–Strogatz).
 
-Otrzymane wyniki eksperymentalne wykazały, że metaheurystyki, takie jak algorytmy genetyczne oraz reinforcement learning, zapewniają najlepsze kompromisy między jakością rozwiązania a czasem działania. Analiza dynamicznej wersji problemu potwierdziła skuteczność algorytmów adaptacyjnych przy zmianach struktury sieci w czasie.
+Wyniki pokazują, że metaheurystyki (w szczególności algorytm genetyczny, tabu search i symulowane wyżarzanie) pozwalają osiągać rozwiązania bliskie optymalnym przy znacznym skróceniu czasu obliczeń względem ILP na większych instancjach. Dodatkowo przeanalizowano wariant dynamiczny, w którym sieć ulega zmianom w czasie, oraz wpływ polityk cenowych i dodatkowych typów planów subskrypcyjnych na optymalne decyzje.
 
-Dodatkowo przeanalizowano wpływ różnych polityk cenowych oraz dodatkowych planów subskrypcyjnych na decyzje zakupowe użytkowników. Wskazano potencjalne zastosowania modelu w różnych branżach oraz zaproponowano kierunki dalszych badań.
-
-\textbf{Słowa kluczowe:} teoria grafów, optymalizacja kombinatoryczna, dominowanie rzymskie, sieci społecznościowe, metaheurystyki, zakup licencji, algorytmy genetyczne, reinforcement learning.
+\textbf{Słowa kluczowe:} teoria grafów, optymalizacja kombinatoryczna, dominowanie rzymskie, sieci społecznościowe, heurystyki, metaheurystyki, programowanie całkowitoliczbowe.
