Add GenAI usage note and update various sections for clarity and consistency

--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -185,6 +185,12 @@
   url          = {https://example.invalid/duolingo-family}
 }
 
+@misc{genai_usage,
+  title        = {Informacja o użyciu narzędzi GenAI w pracy dyplomowej},
+  howpublished = {Oświadczenie autora: wykorzystano narzędzia generatywnej SI (asystenta tekstowego) do wsparcia redakcji i porządkowania kodu/analiz; autor dokonał weryfikacji merytorycznej i odpowiada za treść. Narzędzia nie są współautorami.},
+  date         = {2025}
+}
+
 % Classic references requested in the review
 @article{kirkpatrick1983,
   author       = {Kirkpatrick, S. and Gelatt, C. D. and Vecchi, M. P.},
