feat: Add dynamic analysis features and parameter sweep for metaheuristics
- Implemented normalized mutation intensity calculation and plotting of cost delta vs mutation intensity in dynamic_analysis.py.
- Enhanced export_thesis_figs.py to include new figures for dynamic analysis.
- Introduced meta_params_sweep.py for coarse parameter sweeps across various algorithms.
- Created mk_latex_table.py to generate LaTeX tables from aggregate results.
- Updated dynamic.py to support realistic mutation modes for nodes and edges.
- Added pipelines.py to manage various benchmarking and analysis runs.
- Enhanced dynamic_simulator.py with new edge rewiring and node attachment strategies.
- Updated license_config.py to reflect changes in Netflix licensing structure.

--- a/docs/thesis/bibliography.bib
+++ b/docs/thesis/bibliography.bib
@@ -15,11 +15,15 @@
   date         = {2008}
 }
 
-@article{chambers2009,
-  author       = {Placeholder, A. and Placeholder, B.},
-  title        = {Roman domination is NP-hard},
-  journaltitle = {Placeholder Journal},
-  date         = {2009}
+@article{Chambers2009Extremal,
+  author       = {Chambers, E. W. and Kinnersley, W. B. and Prince, N. and West, D. B.},
+  title        = {Extremal problems for Roman domination},
+  journaltitle = {SIAM Journal on Discrete Mathematics},
+  year         = {2009},
+  volume       = {23},
+  number       = {3},
+  pages        = {1575--1596},
+  doi          = {10.1137/070699688}
 }
 
 @article{POUREIDI2023106363,
@@ -38,10 +42,10 @@
 }
 
 @book{haynes1998domination,
-  author       = {Haynes, T. W. and Hedetniemi, S. and Slater, P.},
+  author       = {Haynes, Teresa W. and Hedetniemi, Stephen T. and Slater, Peter J.},
   title        = {Fundamentals of Domination in Graphs},
-  publisher    = {Placeholder Publisher},
-  date         = {1998}
+  publisher    = {Marcel Dekker},
+  year         = {1998}
 }
 
 @article{BermanFujitoThreeDegree,
@@ -59,10 +63,14 @@
 }
 
 @article{Cockayne2004,
-  author       = {Cockayne, E. J. and others},
+  author       = {Cockayne, E. J. and Dreyer Jr., P. A. and Hedetniemi, S. M. and Hedetniemi, S. T.},
   title        = {Roman domination in graphs},
-  journaltitle = {Placeholder Journal},
-  date         = {2004}
+  journaltitle = {Discrete Mathematics},
+  year         = {2004},
+  volume       = {278},
+  number       = {1--3},
+  pages        = {11--22},
+  doi          = {10.1016/j.disc.2003.06.004}
 }
 
 @article{PARRAINZA2024926,
@@ -93,6 +101,35 @@
   date         = {1998}
 }
 
+@article{HolmeKim2002,
+  author       = {Holme, Petter and Kim, Beom Jun},
+  title        = {Growing Scale-Free Networks with Tunable Clustering},
+  journaltitle = {Physical Review E},
+  year         = {2002},
+  volume       = {65},
+  number       = {2},
+  pages        = {026107},
+  doi          = {10.1103/PhysRevE.65.026107}
+}
+
+@inproceedings{Leskovec2008Microscopic,
+  author       = {Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
+  title        = {Microscopic Evolution of Social Networks},
+  booktitle    = {Proceedings of the 14th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
+  year         = {2008},
+  pages        = {462--470},
+  doi          = {10.1145/1401890.1401948}
+}
+
+@inproceedings{Leskovec2005GraphsOverTime,
+  author       = {Leskovec, Jure and Kleinberg, Jon and Faloutsos, Christos},
+  title        = {Graphs over Time: Densification Laws, Shrinking Diameters and Possible Explanations},
+  booktitle    = {Proceedings of the 11th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
+  year         = {2005},
+  pages        = {177--187},
+  doi          = {10.1145/1081870.1081893}
+}
+
 @article{CHAUDHARY2024301,
   author       = {Chaudhary, P. and others},
   title        = {Survey on domination and variants},
@@ -107,11 +144,13 @@
   date         = {2020}
 }
 
-@article{henning2013roman,
-  author       = {Henning, M. A. and Yeo, A.},
-  title        = {Total and Roman domination in graphs},
-  journaltitle = {Placeholder Journal},
-  date         = {2013}
+@book{henning2013roman,
+  author       = {Henning, Michael A. and Yeo, Anders},
+  title        = {Total Domination in Graphs},
+  publisher    = {Springer},
+  year         = {2013},
+  series       = {Springer Monographs in Mathematics},
+  note         = {Zawiera rozdziały dot. wariantów rzymskich}
 }
 
 @article{booth1980dominating,
@@ -136,11 +175,14 @@
   date         = {1972}
 }
 
-@article{Brandes2004,
-  author       = {Brandes, U. and others},
-  title        = {Variants of centrality and applications},
-  journaltitle = {Placeholder Journal},
-  date         = {2004}
+@article{Brandes2001,
+  author       = {Brandes, Ulrik},
+  title        = {A Faster Algorithm for Betweenness Centrality},
+  journaltitle = {Journal of Mathematical Sociology},
+  year         = {2001},
+  volume       = {25},
+  number       = {2},
+  pages        = {163--177}
 }
 
 @inproceedings{McAuley2012,
@@ -178,11 +220,12 @@
   url          = {https://example.invalid/wiki/Dominating_set}
 }
 
-@misc{duolingo_family,
-  title        = {Duolingo Family Plan},
-  howpublished = {Product page},
-  date         = {2024},
-  url          = {https://example.invalid/duolingo-family}
+@misc{duolingo_family_blog,
+  title        = {Introducing the Duolingo Family Plan},
+  howpublished = {Duolingo Blog},
+  date         = {2020-08-12},
+  url          = {https://blog.duolingo.com/duolingo-family-plan/},
+  note         = {Dostęp 2025-09-15}
 }
 
 @misc{genai_usage,
@@ -258,4 +301,179 @@
   howpublished = {Industry report},
   date         = {2024},
   url          = {https://example.invalid/subscription-prices-2024}
+}
+
+% --- Added: RD variants and capacitated domination ---
+@incollection{fernau2006paramRD,
+  author       = {Fellows, Michael R. and Fernau, Henning and Prieto, Eduardo and Rosamond, Frances A.},
+  title        = {A Parameterized Perspective on Roman Domination},
+  booktitle    = {SOFSEM 2006: Theory and Practice of Computer Science},
+  publisher    = {Springer},
+  year         = {2006},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {3831},
+  pages        = {271--282},
+  doi          = {10.1007/11611257_22}
+}
+
+@article{fernau2008paramRD,
+  author       = {Fellows, Michael R. and Fernau, Henning and Prieto, Eduardo and Rosamond, Frances A.},
+  title        = {The parameterized complexity of Roman domination},
+  journaltitle = {Information Processing Letters},
+  year         = {2008},
+  volume       = {109},
+  number       = {1},
+  pages        = {68--70},
+  doi          = {10.1016/j.ipl.2008.08.011}
+}
+
+@article{roman2_survey_2024,
+  author       = {Koam, Stephane and Ouattara, Ismael and Yaro, Prosper},
+  title        = {A Survey on Roman\{2\}-Domination in Graphs},
+  journaltitle = {Mathematics},
+  year         = {2024},
+  volume       = {12},
+  number       = {8},
+  pages        = {1467},
+  doi          = {10.3390/math12081467}
+}
+
+@article{cap_dom_ars2010,
+  author       = {Goddard, Wayne and Hedetniemi, Stephen T. and Huff, Dave},
+  title        = {Capacitated domination},
+  journaltitle = {Ars Combinatoria},
+  year         = {2010},
+  volume       = {96},
+  pages        = {75--86}
+}
+
+@article{cap_dom_algo2011,
+  author       = {Kao, Mong-Jen and Chen, Han-Lin and Lee, D. T.},
+  title        = {Approximation Algorithms for the Capacitated Domination Problem},
+  journaltitle = {Algorithmica},
+  year         = {2011},
+  volume       = {61},
+  number       = {4},
+  pages        = {1009--1031},
+  doi          = {10.1007/s00453-010-9460-0}
+}
+
+@misc{cap_dom_planar_2016,
+  author       = {Chopra, Shubham and Dondeti, Raghav and Upadhyay, Akash and Vaish, Rishabh},
+  title        = {Capacitated Dominating Set on Planar Graphs},
+  howpublished = {arXiv preprint arXiv:1605.02219},
+  year         = {2016},
+  url          = {https://arxiv.org/abs/1605.02219}
+}
+
+% Spotify pricing (USA)
+@misc{spotify_us_pricing_2025,
+  title        = {Get started with Premium},
+  howpublished = {Spotify US Pricing Page},
+  date         = {2025-09-15},
+  url          = {https://www.spotify.com/us/premium/},
+  note         = {Cennik USA: Individual $11.99$, Duo $16.99$, Family $19.99$ za m-c; dostęp 2025-09-15}
+}
+
+% Spotify pricing (Poland, PLN)
+@misc{spotify_pl_premium_2025,
+  title        = {Zyskaj Premium},
+  howpublished = {Spotify Polska — strona Premium},
+  date         = {2025-09-15},
+  url          = {https://www.spotify.com/pl/premium/},
+  note         = {Cennik w PLN: Individual 23{,}99, Duo 30{,}99, Family 37{,}99; dostęp 2025-09-15}
+}
+
+% Spotify Duo/Family address requirement (legal)
+@misc{spotify_duo_legal,
+  title        = {Spotify Premium Duo Terms and Conditions},
+  howpublished = {Spotify Legal},
+  date         = {2025-09-15},
+  url          = {https://www.spotify.com/us/legal/duo/},
+  note         = {Wymóg wspólnego adresu; dostęp 2025-09-15}
+}
+
+@misc{spotify_family_address_verification,
+  title        = {Plan Family a adres zamieszkania},
+  howpublished = {Centrum pomocy Spotify},
+  date         = {2025-09-15},
+  url          = {https://support.spotify.com/pl/article/family-address-verification/},
+  note         = {Weryfikacja adresu dla Family/Duo; dostęp 2025-09-15}
+}
+
+@misc{spotify_us_student_site,
+  title        = {Premium Student},
+  howpublished = {Spotify US — Student Plan},
+  date         = {2025-09-15},
+  url          = {https://www.spotify.com/us/student/},
+  note         = {Wymagana weryfikacja SheerID, plan jednoosobowy; dostęp 2025-09-15}
+}
+
+@misc{spotify_student_support,
+  title        = {Zniżka Studencka Spotify — kto może skorzystać},
+  howpublished = {Centrum pomocy Spotify},
+  date         = {2025-09-15},
+  url          = {https://support.spotify.com/pl/article/student-discount/},
+  note         = {Zasady, limity i weryfikacja; dostęp 2025-09-15}
+}
+@misc{ms365_family_up_to_6,
+  title        = {Share your Microsoft 365 Family subscription},
+  howpublished = {Microsoft Support},
+  year         = {2025},
+  url          = {https://support.microsoft.com/en/account-billing/share-your-microsoft-365-family-subscription-6d83e3fe-01f8-4895-a2e1-3ba9f7a5b14b},
+  note         = {Do 5 dodatkowych osób (łącznie 6); dostęp 2025-09-15}
+}
+
+@article{ms365_price_increase_cnbc,
+  title   = {Microsoft raises Microsoft 365 prices as it adds AI assistant to more products},
+  author  = {Novet, Jordan},
+  journal = {CNBC},
+  year    = {2025},
+  month   = {January},
+  url     = {https://www.cnbc.com/2025/01/16/microsoft-raises-microsoft-365-prices-as-it-adds-ai-assistant.html},
+  note    = {Ceny USA po 2025-01-16; dostęp 2025-09-15}
+}
+
+@article{ms365_price_increase_theverge,
+  title   = {Microsoft 365 prices are going up as more AI features arrive},
+  author  = {Warren, Tom},
+  journal = {The Verge},
+  year    = {2025},
+  month   = {January},
+  url     = {https://www.theverge.com/2025/1/16/24297905/microsoft-365-price-increases-ai-features},
+  note    = {Ceny USA po 2025-01-16; dostęp 2025-09-15}
+}
+
+@misc{netflix_plans_2025,
+  title        = {Plans and Pricing},
+  howpublished = {Netflix Help Center},
+  year         = {2025},
+  url          = {https://help.netflix.com/en/node/24926},
+  note         = {Standard: 2, Premium: 4; ceny USA (np. $17.99/$24.99). Dostęp 2025-09-15}
+}
+
+@misc{netflix_account_sharing,
+  title        = {Sharing your Netflix account},
+  howpublished = {Netflix Help Center},
+  year         = {2025},
+  url          = {https://help.netflix.com/en/node/122377},
+  note         = {Zasady household; dostęp 2025-09-15}
+}
+
+@article{youtube_premium_price2024,
+  title   = {YouTube Premium price hike: here's how much it costs now},
+  author  = {Husband, Tom},
+  journal = {TechRadar},
+  year    = {2024},
+  month   = {July},
+  url     = {https://www.techradar.com/streaming-services/youtube-premium-price-hike},
+  note    = {US: Individual $13.99$, Family $22.99$; dostęp 2025-09-15}
+}
+
+@misc{google_family_groups,
+  title        = {Google Families — Family groups},
+  howpublished = {Google},
+  year         = {2025},
+  url          = {https://families.google.com/families/},
+  note         = {Grupa rodzinna do 6 osób; dostęp 2025-09-15}
 }
