--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -38,7 +38,7 @@
 \nocite{genai_usage}
 
 % Appendices (additional materials, calculations, etc.)
-% \appendix
-% \include{chapters/99_appendix}
+\appendix
+\include{chapters/99_appendix}
 
 \end{document}
